<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@drawable/card_bg"
    android:padding="14dp">

    <TextView
        android:id="@+id/subjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/darkPurple"
        android:layout_marginBottom="6dp"
        android:text="@string/subject_name"/>

    <TextView
        android:id="@+id/folderCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#888888"
        android:layout_marginBottom="12dp"
        android:text="@string/_3_folders"/>

    <Button
        android:id="@+id/btnOpenFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_folder"
        android:textSize="12sp"
        android:backgroundTint="@color/lightPurple"
        android:textColor="@color/darkPurple"/>

</LinearLayout>