<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    android:background="@drawable/card_bg"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/folder_icon"
        android:src="@drawable/app_logo2"
        android:layout_marginEnd="12dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/folderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/darkPurple"/>

        <TextView
            android:id="@+id/imageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#888888"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:textSize="11sp"
        android:backgroundTint="@color/lightPurple"
        android:textColor="@color/darkPurple"
        android:layout_marginEnd="6dp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="11sp"
        android:backgroundTint="#FFCDD2"
        android:textColor="#C62828"/>

</LinearLayout>